# hrpqct-multistack-db

./: CITATION.cff  README.md
00_DB/: header-db.csv
01_CODE/: Dockerfile  docker-compose.yml  main.py  requirements.txt  settings_main.cfg  setup.cfg
01_CODE/src/hrpqct_database/: dataclasses_hrpqct.py  db_converter.py  export_combined_database.py  gen_pdf.py  plotly_template.py  reference_values.py  statistics_hrpqct.py
01_CODE/src/hrpqct_database/style/: paper-style.mplstyle
01_CODE/src/hrpqct_database/utils/: expand_database.py
03_EVALUATION/01_demographics/: demographics.R  frax.R
03_EVALUATION/02_extensive-intensive/: extensive_intensive.ipynb
03_EVALUATION/03_correlation-matrix/: correlation-matrix-database.ipynb
03_EVALUATION/04_rate-change/: descriptive_statistics_paper.ipynb
03_EVALUATION/04_rate-change/pe_repro_median_change/: descriptive_statistics_female_quad.csv  descriptive_statistics_male_quad.csv
03_EVALUATION/04_rate-change/precision_error/: gluer_repro_michi_data.ipynb  gluer_reproducibility.ipynb
03_EVALUATION/05_radar-plots/: statistics_age_sex_site.ipynb
03_EVALUATION/06_quadratic-fit-parameters-tables/: 02_Model.R  quadratic-fit.ipynb
