[metadata]
name = hrpqct_database
description = Python toolkit for analysis of HR-pQCT database and individual participants in relation to the database.
author= Simone Poncioni
license = MIT
license_file = LICENSE
platforms = unix, linux, osx, cygwin, win32
classifiers =
    Programming Language :: Python :: 3

[options]
packages = 
    hrpqct_database
install_requires = file: requirements.txt
include_package_data = true
python_requires =
    >=3.11
package_dir =
    hrpqct_database = src/hrpqct_database
zip_safe = false